2002-03-21  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* docs/gnuplot.doc (zeroaxis): Add some examples to make the
 	syntax more transparent for newbies.

2002-03-21  Alexander Mai <st002279@hrzpub.tu-darmstadt.de>

	* config/makefile.os2 src/os2/gclient.c: Get it to build again.

2002-03-21  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/os2/gclient.c: Remove my "//PM" tags. Remove encapsulated
	comments due to the 2002-03-16: // => /* */ replacement.

	* config/makefile.os2: Let runtime be dependent on config.h.

	* src/help.c src/pm3d.c src/set.c: Remove compiler warnings.

2002-03-18  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/graph3d.c (tic_unitz): New variable for truly 3D ticmark
 	lines. Stores z component of tickmark direction routine.
	(draw_3d_graphbox): Extend computation of tic line directions to
 	cover 3 dimensions.
	(xtick_callback, ytick_callback): Make use of new tic_unitz
 	variable, and change all xticks to use term->v_tic, all yticks to
 	term->h_tic.  Fold local variable "dirn" into "scale".

2002-03-16  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/os2/gclient.c: Weeded out all C++-style // comments.
  	CodeStyle disallows them.
	
	* src/pm3d.c (pm3d_plot): Use coordinate field "color" instead of
 	"ylow", for PM3D.
	(filled_color_contour_plot): Changed type of local variable
 	pm3d_color_from_column to TBOOLEAN.

	* src/plot3d.c (get_3ddata): Use coordinate field "color" instead
 	of "ylow", for PM3D.

	* src/graph3d.h (struct surface_points): Changed type of
 	pm3d_color_from_column to TBOOLEAN.

	* src/graph3d.c (plot3d_lines_pm3d, plot3d_points_pm3d): Use
 	coordinate field "color" instead of "ylow", for PM3D.

	* src/datafile.c (df_3dmatrix): Write to coordinate field "color"
 	instead of "ylow", for PM3D. Call STORE_WITH_LOG_AND_UPDATE_RANGE
 	instead of update_pm3d_range.

	* src/gp_types.h (struct coordinate): Add separate element 'color'